# Python_Web_HW8

./: pyproject.toml
First_part/: README.md  models.py  seeds.py
Second_part/: README.md  consumer.py  consumer_email.py  consumer_sms.py  models_contact.py  producer.py
