[tool.poetry]
name = "py-web-hw08"
version = "0.1.0"
description = ""
authors = ["Maksym Melnyk <maks.melnyk.94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"
faker = "^22.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
